# multi-agent-content-generation-workflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  hardening.md  persona.md  research.md  testing.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FinalDraftCard.tsx  SourceList.tsx
frontend/src/components/decor/: CoolShape.tsx
frontend/src/components/layout/: AmbientBackground.tsx  AppShell.tsx  ErrorBoundary.tsx  ThemeToggle.tsx  TopNav.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  empty.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  skeleton.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/lib/: api.ts  recentDrafts.ts  theme.ts  types.ts  utils.ts  voice.ts
frontend/src/pages/: Dashboard.tsx  Draft.tsx  NotFound.tsx  PersonaCreate.tsx  PersonaDetail.tsx  PersonaEval.tsx  PersonaList.tsx  PersonaRefine.tsx  Settings.tsx
scripts/: dev.sh  download_models.sh  smoke.py  smoke_edit.py  smoke_persona.py  smoke_voice.py  start.sh  start_voice.sh  stop.sh  stop_voice.sh  voice_server.py
src/x_agent/: __init__.py  cli.py  config.py  formatter.py  graph.py  interview_graph.py  nodes.py  server.py  state.py  x_client.py
src/x_agent/persona/: __init__.py  critic.py  embedder.py  interview.py  json_utils.py  markdown.py  questions.py  schema.py  store.py
src/x_agent/research/: __init__.py  compose.py  fetcher.py  providers.py  schema.py
src/x_agent/voice/: __init__.py  proxy.py  security.py  stt.py  tts.py
tests/: test_critic_pure.py  test_formatter.py  test_persona_schema.py  test_persona_store.py  test_questions_deep.py  test_research.py  test_voice_endpoints.py  test_voice_security.py  test_x_client.py
