[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-agent"
version = "0.2.0"
description = "Local LangGraph + Ollama agent that drafts short, persona-shaped posts. Never publishes anywhere -- you copy the final draft yourself."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "x-agent" }]
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain-core>=0.3,<2.0",
    "langchain-ollama>=1.0,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "typer>=0.15,<1.0",
    "rich>=13.7,<15.0",
    "python-dotenv>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "numpy>=1.26,<3.0",
    "filelock>=3.13,<4.0",
    "httpx>=0.27,<1.0",
    "ddgs>=9.0,<10.0",
    "trafilatura>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-mock>=3.12,<4.0",
    "respx>=0.21,<1.0",
]

[project.scripts]
x-agent = "x_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
